--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,16 +31,16 @@ jobs:
         
      - name: init
        run: terraform init
-     - name: validate
-       run: terraform validate     
-     - name: plan
-       run: terraform plan
+     # - name: validate
+     #   run: terraform validate     
+     # - name: plan
+     #   run: terraform plan
 
-     - name: apply
-       run: terraform apply -auto-approve
+     # - name: apply
+     #   run: terraform apply -auto-approve
 
-    #  - name: destroy
-    #    run: terraform destroy -auto-approve
+     - name: destroy
+       run: terraform destroy -auto-approve
       
       
         
